--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Meu Site de Produtos</title>
 </head>
 <body>
-    <h1 id="titulo">Bem-vindo à Loja!</h1>
+    <h1 id="titulo">Bem-vindo à sua Loja!</h1>
     <!-- Aqui vamos adicionar o elemento do produto -->
     <script src="./script.js" defer></script>
 </body>
